# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/print/print_fwk/print.gni")
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("ScanServiceStubFuzzTest") {
  module_out_path = fuzz_test_output_path

  fuzz_config_file = "${print_path}/test/fuzztest/scanservicestub_fuzzer"

  include_dirs = [
    "${print_path}/services/scan_service/include",
    "${print_path}/frameworks/innerkitsimpl/scan_impl/include",
    "${print_utils_path}/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  deps = [
    "${print_path}/frameworks/helper/scan_helper:scan_helper",
    "${print_path}/frameworks/innerkitsimpl/scan_impl:scan_client",
    "${print_path}/services/scan_service:scan_service",
  ]

  if (sane_enable) {
    include_dirs += [ "//vendor/open_source/backends/include" ]
    deps += [ "//vendor/open_source/backends:third_sane" ]
    cflags_cc = [ "-DSANE_ENABLE" ]
  }

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:tel_core_service_api",
    "distributed_notification_service:ans_innerkits",
    "drivers_interface_usb:libusb_proxy_1.0",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_core",
    "libjpeg-turbo:turbojpeg",
    "napi:ace_napi",
    "netmanager_base:net_conn_manager_if",
    "netmanager_ext:mdns_manager_if",
    "os_account:os_account_innerkits",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "usb_manager:usbsrv_client",
  ]

  if (security_guard_enabled) {
    external_deps += [
      "security_guard:libsg_collect_sdk",
      "time_service:time_client",
    ]
  }

  sources = [ "scanservicestub_fuzzer.cpp" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":ScanServiceStubFuzzTest",
  ]
}
###############################################################################
